--- a/graphs/src/main/resources/static/index.html
+++ b/graphs/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Hello Angular Rickshaw</title>
+<title>Metrics Demo</title>
 <link href="webjars/bootstrap/3.2.0/css/bootstrap.min.css"
 	rel="stylesheet">
 <link href="webjars/rickshaw/1.5.0/rickshaw.min.css" rel="stylesheet">
